<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loginSignup.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_image_view"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:contentDescription="@string/bg_img_desc"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_bg_img" />

        <TextView
            android:id="@+id/login_welcome_hello_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/login_welcome"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@id/login_image_view"
            app:layout_constraintTop_toTopOf="@id/login_image_view" />

        <TextView
            android:id="@+id/login_welcome_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/login_welcome_text"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/login_image_view"
            app:layout_constraintTop_toBottomOf="@+id/login_welcome_hello_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobileOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/login_mobile_hint"
            app:expandedHintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_image_view"
            app:placeholderText="@string/login_mobile_ph"
            app:placeholderTextAppearance="@style/TextAppearance.MyTheme.Body2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_mobile_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />
        </com.google.android.material.textfield.TextInputLayout>
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/nameOutlinedTextField"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginEnd="24dp"-->
<!--            android:hint="@string/signup_name_hint"-->
<!--            app:expandedHintEnabled="false"-->
<!--            app:hintTextAppearance="@style/TextAppearance.MyTheme.Subtitle2"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/login_image_view"-->
<!--            app:placeholderText="@string/signup_name_ph"-->
<!--            app:placeholderTextAppearance="@style/TextAppearance.MyTheme.Body2">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/signup_name_edit_text"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="textPersonName"-->
<!--                android:paddingTop="12dp"-->
<!--                android:paddingBottom="12dp" />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/login_password_hint"
            app:endIconMode="password_toggle"
            app:expandedHintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobileOutlinedTextField"
            app:placeholderText="@string/login_password_ph"
            app:placeholderTextAppearance="@style/TextAppearance.MyTheme.Body2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_error_text_view"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            android:textColor="?attr/colorError"
            app:drawableStartCompat="@android:drawable/stat_notify_error"
            app:drawableTint="?attr/colorError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/login_error_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordOutlinedTextField" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/login_rem_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:checked="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_error_text_view"
            app:switchTextAppearance="@style/TextAppearance.MyTheme.Subtitle2" />


        <TextView
            android:id="@+id/login_rem_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/login_switch_remember_text"
            android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/login_rem_switch"
            app:layout_constraintStart_toEndOf="@+id/login_rem_switch"
            app:layout_constraintTop_toTopOf="@+id/login_rem_switch" />

        <TextView
            android:id="@+id/login_forgot_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/login_forgot_text"
            android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/login_rem_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_rem_switch" />

        <TextView
            android:id="@+id/login_signup_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/login_signup_text"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_rem_switch" />

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/login_btn_text"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_signup_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>